k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zero-downtime
  labels:
    app.kubernetes.io/managed-by: kubectl
