k8s/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
  namespace: zero-downtime
spec:
  selector:
    app: dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
