k8s/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-canary-svc
  namespace: zero-downtime
  labels:
    app: myapp
spec:
  selector:
    app: myapp
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
