k8s/networkpolicy-load-generator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-load-generator
  namespace: zero-downtime
spec:
  podSelector:
    matchLabels:
      run: load-generator
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - ipBlock:
            cidr: 10.43.0.0/16
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 8000
    - to:
        - podSelector:
            matchLabels:
              app: myapp
      ports:
        - protocol: TCP
          port: 8000
        - protocol: TCP
          port: 80
